@@ -74,11 +74,11 @@ return array(
 	    'missions:work_from_home' => 'Travail à domicile',
 	    'missions:email_manager' => 'Email le gérant',
 	    'missions:share_with_colleague' => 'Partager avec un collègue',
-	    'missions:read_more' => 'En Savoir Plus',
+	    'missions:read_more' => 'Savoir Plus',
 	    'missions:apply' => 'Appliquer',
-	    'missions:deadline' => 'Date limite:',
-	    'missions:department' => 'Département:',
-	    'missions:manager_email' => 'Email du gérant:',
+	    'missions:deadline' => 'Date limite',
+	    'missions:department' => 'Département',
+	    'missions:manager_email' => 'Email du gérant',
 	    'missions:none_given' => 'Aucune donnée',
 	    'missions:none_required' => 'Aucun requis',
 	    'missions:na' => 'N/A',
