@@ -4,7 +4,7 @@
 	<id>missions</id>
 	<author>National Research Council Canada</author>
 	<website>http://www.nrc-cnrc.gc.ca/eng/rd/ict/</website>
-	<version>4</version>
+	<version>5</version>
 	<description>Allows managers to post micro-missions (tasks of short
 		durations and matching particular skills profiles) and users to apply
 		for them.</description>
@@ -13,5 +13,14 @@
 	<requires>
 		<type>elgg_release</type>
 		<version>1.12</version>
+	</requires>
+	<requires>
+		<type>plugin</type>
+		<name>missions_organization</name>
+	</requires>
+	<requires>
+		<type>priority</type>
+		<priority>after</priority>
+		<plugin>missions_organization</plugin>
 	</requires>
 </plugin_manifest>
